<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="demo2.com.qf.com.myqiushi.MainActivity">
<FrameLayout
    android:id="@+id/ff_content_id"
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_weight="1"/>
    <RadioGroup
        android:id="@+id/rg_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <RadioButton
            android:id="@+id/rb_qiushi_id"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            style="@style/rb_bootom_item"
            android:drawableTop="@drawable/qiushi_selector"
            android:checked="true"
            android:text="@string/qiushi"
            android:textColor="@drawable/text_selector"/>
        <RadioButton
            android:id="@+id/rb_qiuyou_id"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            style="@style/rb_bootom_item"
            android:drawableTop="@drawable/qiuyoucircle_selector"
            android:text="@string/qiuyou"
            android:textColor="@drawable/text_selector"/>
        <RadioButton
            android:id="@+id/rb_zhibo_id"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            style="@style/rb_bootom_item"
            android:drawableTop="@drawable/zhibo_selector"
            android:text="@string/zhibo"
            android:textColor="@drawable/text_selector"/>
        <RadioButton
            android:id="@+id/rb_xiaozhitiao_id"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            style="@style/rb_bootom_item"
            android:drawableTop="@drawable/message_selector"
            android:text="@string/xiaozhitiao"
            android:textColor="@drawable/text_selector"/>
        <RadioButton
            android:id="@+id/rb_mine_id"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            style="@style/rb_bootom_item"
            android:drawableTop="@drawable/mine_selector"
            android:text="@string/mine"
            android:textColor="@drawable/text_selector"/>
    </RadioGroup>
</LinearLayout>
